--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -43,7 +43,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "See Shawn Malik_EDA Q1.pdf attachment in GitHub repo"
+   ]
   },
   {
    "cell_type": "markdown",
